--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 images/alpine/virt-3.17.2/alpine-virt-3.17.2-x86.iso filter=lfs diff=lfs merge=lfs -text
 images/alpine/virt-3.17.2/v86state.bin filter=lfs diff=lfs merge=lfs -text
+images/alpine/virt-3.17.2/v86state.bin.zst filter=lfs diff=lfs merge=lfs -text
