--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "less": "^4.1.3",
+    "prettier": "2.8.4",
     "vite": "^4.1.2"
   },
   "dependencies": {
     "@blueprintjs/core": "^4.16.3",
     "@blueprintjs/icons": "^4.13.2",
     "@vitejs/plugin-react": "^3.1.0",
+    "@woodenfish/libv86": "0.0.2-alpha.3",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.35.0",
@@ -22,7 +24,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-mosaic-component": "^6.0.0",
-    "v86": "^0.4.0",
     "zustand": "^4.3.3"
   }
 }
