--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "server-box",
   "license": "MIT",
   "scripts": {
-    "dev": "vite --host"
+    "dev": "vite --host",
+    "build": "vite build"
   },
   "devDependencies": {
     "@monaco-editor/react": "^4.4.6",
@@ -15,11 +16,11 @@
   "dependencies": {
     "@blueprintjs/core": "^4.16.3",
     "@blueprintjs/icons": "^4.13.2",
+    "@monaco-editor/loader": "^1.3.2",
     "@vitejs/plugin-react": "^3.1.0",
     "@woodenfish/libv86": "0.0.2-alpha.3",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
-    "monaco-editor": "^0.35.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
