--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@blueprintjs/core": "^4.16.3",
     "@blueprintjs/icons": "^4.13.2",
+    "@blueprintjs/popover2": "^1.13.5",
     "@monaco-editor/loader": "^1.3.2",
     "@vitejs/plugin-react": "^3.1.0",
     "@woodenfish/libv86": "0.0.2-alpha.3",
