--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@blueprintjs/core": "^4.16.3",
     "@blueprintjs/icons": "^4.13.2",
     "@blueprintjs/popover2": "^1.13.5",
+    "@kvs/indexeddb": "^2.1.3",
     "@monaco-editor/loader": "^1.3.2",
     "@vitejs/plugin-react": "^3.1.0",
-    "@woodenfish/libv86": "0.0.2-alpha.3",
+    "@woodenfish/libv86": "0.0.2-alpha.6",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
