--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@monaco-editor/loader": "^1.3.2",
     "@vitejs/plugin-react": "^3.1.0",
     "@woodenfish/libv86": "0.0.2-alpha.7",
+    "antd": "^5.2.3",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
