--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "build": "vite build"
   },
   "devDependencies": {
-    "@monaco-editor/react": "^4.4.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "less": "^4.1.3",
@@ -14,20 +13,24 @@
     "vite": "^4.1.2"
   },
   "dependencies": {
-    "@blueprintjs/core": "^4.16.3",
-    "@blueprintjs/icons": "^4.13.2",
-    "@blueprintjs/popover2": "^1.13.5",
-    "@kvs/indexeddb": "^2.1.3",
     "@monaco-editor/loader": "^1.3.2",
+    "@monaco-editor/react": "^4.4.6",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-context": "^1.0.0",
+    "@radix-ui/react-context-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.2.0",
+    "@radix-ui/react-menu": "^2.0.3",
+    "@radix-ui/react-primitive": "^1.0.1",
     "@vitejs/plugin-react": "^3.1.0",
+    "@vscode/codicons": "^0.0.32",
     "@woodenfish/libv86": "0.0.2-alpha.7",
+    "@woodenfish/vscode-icon-map-seti": "^0.0.2",
     "antd": "^5.2.3",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-mosaic-component": "^6.0.0",
     "zustand": "^4.3.3"
   }
 }
