--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@radix-ui/react-primitive": "^1.0.1",
     "@vitejs/plugin-react": "^3.1.0",
     "@vscode/codicons": "^0.0.32",
-    "@woodenfish/libv86": "0.0.2-alpha.7",
+    "@woodenfish/libv86": "0.0.2-alpha.9",
     "@woodenfish/vscode-icon-map-seti": "^0.0.2",
     "antd": "^5.2.3",
     "classnames": "^2.3.2",
@@ -31,6 +31,9 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "xterm-addon-fit": "^0.7.0",
+    "xterm-addon-unicode11": "^0.5.0",
+    "xterm-addon-webgl": "^0.14.0",
     "zustand": "^4.3.3"
   }
 }
