--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "less": "^4.1.3",
+    "monaco-editor": "^0.36.1",
     "prettier": "2.8.4",
-    "vite": "^4.1.2"
+    "vite": "^4.1.2",
+    "vite-plugin-external": "^1.2.8"
   },
   "dependencies": {
     "@monaco-editor/loader": "^1.3.2",
-    "@monaco-editor/react": "^4.4.6",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-context": "^1.0.0",
     "@radix-ui/react-context-menu": "^2.1.2",
