--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "less": "^4.1.3",
     "monaco-editor": "^0.36.1",
     "prettier": "2.8.4",
+    "rollup-plugin-external-globals": "^0.7.3",
+    "rollup-plugin-visualizer": "^5.9.0",
     "vite": "^4.1.2",
     "vite-plugin-external": "^1.2.8"
   },
