feat: integrate filer

--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@radix-ui/react-primitive": "^1.0.1",
     "@vitejs/plugin-react": "^3.1.0",
     "@vscode/codicons": "^0.0.32",
-    "@woodenfish/libv86": "0.0.2-alpha.13",
+    "@woodenfish/libv86": "0.0.2-alpha.16",
     "@woodenfish/vscode-icon-map-seti": "^0.0.2",
     "antd": "^5.2.3",
     "classnames": "^2.3.2",
+    "filer": "^1.4.1",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
+    "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "xterm-addon-fit": "^0.7.0",
