--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "build": "vite build"
   },
   "devDependencies": {
+    "@types/node": "^18.15.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "less": "^4.1.3",
     "monaco-editor": "^0.36.1",
     "prettier": "2.8.4",
+    "rollup": "^3.19.1",
     "rollup-plugin-external-globals": "^0.7.3",
     "rollup-plugin-visualizer": "^5.9.0",
     "vite": "^4.1.2",
@@ -36,6 +38,7 @@
     "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "xterm": "^5.1.0",
     "xterm-addon-fit": "^0.7.0",
     "xterm-addon-unicode11": "^0.5.0",
     "xterm-addon-webgl": "^0.14.0",
