--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-primitive": "^1.0.1",
     "@vitejs/plugin-react": "^3.1.0",
     "@vscode/codicons": "^0.0.32",
+    "@vscode/webview-ui-toolkit": "^1.2.2",
     "@woodenfish/libv86": "0.0.2-alpha.21",
     "@woodenfish/vscode-icon-map-seti": "^0.0.2",
     "antd": "^5.2.3",
